[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passkit-python-grpc-sdk"
version = "1.1.105.5"
authors = [
  { name="passkit", email="support@passkit.com" },
]
description = "Python SDK for Apple Wallet and Google Pay Membership / Loyalty / Access Cards, Coupons, Flights & Event-Tickets."
readme = "readME.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PassKit/passkit-python-grpc-sdk"
"Bug Tracker" = "https://github.com/PassKit/passkit-python-grpc-sdk/issues"